<?xml version="1.0" encoding="UTF-8"?>

<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>org.texttechnologylab</groupId>
    <artifactId>DependencyDistance</artifactId>
    <version>0.0.1</version>
    <name>DependencyDistance</name>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.source>11</maven.compiler.source>
        <maven.compiler.target>11</maven.compiler.target>
        <ttlab.typesystem.version>1.9.5</ttlab.typesystem.version>
    </properties>

    <repositories>
        <repository>
            <id>jitpack.io</id>
            <url>https://jitpack.io</url>
        </repository>
        <repository>
            <id>ukp-oss-model-releases</id>
            <url>https://zoidberg.ukp.informatik.tu-darmstadt.de/artifactory/public-model-releases-local</url>
        </repository>
    </repositories>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.11.0</version>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>3.1.2</version>
                <configuration>
                    <argLine>
                        --illegal-access=permit
                        -Dorg.apache.uima.logger.class=org.texttechnologylab.utilities.uima.util.Log4j2Logger_impl
                    </argLine>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-failsafe-plugin</artifactId>
                <version>3.1.2</version>
                <configuration>
                    <argLine>
                        --illegal-access=permit
                    </argLine>
                </configuration>
            </plugin>
            <!--            <plugin>-->
            <!--                <artifactId>maven-assembly-plugin</artifactId>-->
            <!--                <version>3.6.0</version>-->
            <!--                <configuration>-->
            <!--                    <archive>-->
            <!--                        <manifest>-->
            <!--                            <mainClass>org.texttechnologylab.mdd.Run</mainClass>-->
            <!--                        </manifest>-->
            <!--                    </archive>-->
            <!--                    <descriptorRefs>-->
            <!--                        <descriptorRef>jar-with-dependencies</descriptorRef>-->
            <!--                    </descriptorRefs>-->
            <!--                </configuration>-->
            <!--                <executions>-->
            <!--                    <execution>-->
            <!--                        <id>make-assembly</id> &lt;!&ndash; this is used for inheritance merges &ndash;&gt;-->
            <!--                        <phase>package</phase> &lt;!&ndash; bind to the packaging phase &ndash;&gt;-->
            <!--                        <goals>-->
            <!--                            <goal>single</goal>-->
            <!--                        </goals>-->
            <!--                    </execution>-->
            <!--                </executions>-->
            <!--            </plugin>-->
            <!--            <plugin>-->
            <!--                &lt;!&ndash;generate types dynamically &ndash;&gt;-->
            <!--                <groupId>org.apache.uima</groupId>-->
            <!--                <artifactId>jcasgen-maven-plugin</artifactId>-->
            <!--                <version>2.9.0</version>-->
            <!--                <configuration>-->
            <!--                    <limitToProject>true</limitToProject>-->
            <!--                    <typeSystemIncludes>-->
            <!--                        <include>src/main/resources/org/texttechnologylab/types/TypeSystem.xml</include>-->
            <!--                        &lt;!&ndash;                        <include>src/main/resources/org/texttechnologylab/types/reproducibleAnnotations.xml</include>&ndash;&gt;-->
            <!--                    </typeSystemIncludes>-->
            <!--                </configuration>-->
            <!--                <executions>-->
            <!--                    <execution>-->
            <!--                        &lt;!&ndash;call it in the generate-source phase &ndash;&gt;-->
            <!--                        <phase>generate-sources</phase>-->
            <!--                        <goals>-->
            <!--                            <goal>generate</goal>-->
            <!--                        </goals>-->
            <!--                    </execution>-->
            <!--                </executions>-->
            <!--            </plugin>-->
            <!--            <plugin>-->
            <!--                <groupId>org.codehaus.mojo</groupId>-->
            <!--                <artifactId>build-helper-maven-plugin</artifactId>-->
            <!--                <version>1.10</version>-->
            <!--                <executions>-->
            <!--                    <execution>-->
            <!--                        <id>addToSourceFolder</id>-->
            <!--                        <goals>-->
            <!--                            &lt;!&ndash;add the generated sources &ndash;&gt;-->
            <!--                            <goal>add-source</goal>-->
            <!--                        </goals>-->
            <!--                        <phase>process-sources</phase>-->
            <!--                        <configuration>-->
            <!--                            <sources>-->
            <!--                                &lt;!&ndash;default path to generated sources &ndash;&gt;-->
            <!--                                <source>${project.build.directory}/generated-sources/jcasgen</source>-->
            <!--                            </sources>-->
            <!--                        </configuration>-->
            <!--                    </execution>-->
            <!--                </executions>-->
            <!--            </plugin>-->
            <!--            <plugin>-->
            <!--                <groupId>org.apache.maven.plugins</groupId>-->
            <!--                <artifactId>maven-resources-plugin</artifactId>-->
            <!--                <version>3.3.1</version>-->
            <!--                <configuration>-->
            <!--                    <encoding>${project.build.sourceEncoding}</encoding>-->
            <!--                </configuration>-->
            <!--            </plugin>-->
        </plugins>
    </build>
    <dependencies>
        <dependency>
            <groupId>org.apache.uima</groupId>
            <artifactId>uimaj-core</artifactId>
            <version>2.11.0</version>
        </dependency>
        <dependency>
            <groupId>org.apache.uima</groupId>
            <artifactId>uimafit-core</artifactId>
            <version>2.5.0</version>
        </dependency>
        <!-- https://mvnrepository.com/artifact/org.apache.uima/ruta-core -->
        <dependency>
            <groupId>org.apache.uima</groupId>
            <artifactId>ruta-core</artifactId>
            <version>2.5.0</version>
        </dependency>

        <!--        &lt;!&ndash; https://mvnrepository.com/artifact/commons-io/commons-io &ndash;&gt;-->
        <!--        <dependency>-->
        <!--            <groupId>commons-io</groupId>-->
        <!--            <artifactId>commons-io</artifactId>-->
        <!--            <version>2.11.0</version>-->
        <!--        </dependency>-->

        <!--        &lt;!&ndash; https://mvnrepository.com/artifact/org.apache.commons/commons-compress &ndash;&gt;-->
        <!--        <dependency>-->
        <!--            <groupId>org.apache.commons</groupId>-->
        <!--            <artifactId>commons-compress</artifactId>-->
        <!--            <version>1.21</version>-->
        <!--        </dependency>-->

        <!--        <dependency>-->
        <!--            <groupId>org.luaj</groupId>-->
        <!--            <artifactId>luaj-jse</artifactId>-->
        <!--            <version>3.0.1</version>-->
        <!--        </dependency>-->

        <dependency>
            <groupId>de.tudarmstadt.ukp.dkpro.core</groupId>
            <artifactId>de.tudarmstadt.ukp.dkpro.core.opennlp-asl</artifactId>
            <version>1.10.0</version>
        </dependency>
        <!-- https://mvnrepository.com/artifact/de.tudarmstadt.ukp.dkpro.core/de.tudarmstadt.ukp.dkpro.core.io.text-asl -->
        <dependency>
            <groupId>de.tudarmstadt.ukp.dkpro.core</groupId>
            <artifactId>de.tudarmstadt.ukp.dkpro.core.io.text-asl</artifactId>
            <version>1.10.0</version>
        </dependency>
        <!-- https://mvnrepository.com/artifact/de.tudarmstadt.ukp.dkpro.core/de.tudarmstadt.ukp.dkpro.core.tokit-asl -->
        <dependency>
            <groupId>de.tudarmstadt.ukp.dkpro.core</groupId>
            <artifactId>de.tudarmstadt.ukp.dkpro.core.tokit-asl</artifactId>
            <version>1.10.0</version>
        </dependency>
        <!-- https://mvnrepository.com/artifact/de.tudarmstadt.ukp.dkpro.core/de.tudarmstadt.ukp.dkpro.core.api.metadata-asl -->
        <dependency>
            <groupId>de.tudarmstadt.ukp.dkpro.core</groupId>
            <artifactId>de.tudarmstadt.ukp.dkpro.core.api.metadata-asl</artifactId>
            <version>1.10.0</version>
        </dependency>

        <dependency>
            <groupId>com.github.texttechnologylab</groupId>
            <artifactId>Utilities</artifactId>
            <version>d4bbe7ba52</version>
        </dependency>
        <dependency>
            <groupId>org.texttechnologylab</groupId>
            <artifactId>DockerUnifiedUIMAInterface</artifactId>
            <version>1.0</version>
        </dependency>
        <dependency>
            <groupId>org.texttechnologylab</groupId>
            <artifactId>parliament</artifactId>
            <version>1.0-SNAPSHOT</version>
            <exclusions>
                <exclusion>
                    <groupId>org.texttechnologylab</groupId>
                    <artifactId>DockerUnifiedUIMAInterface</artifactId>
                </exclusion>
            </exclusions>
        </dependency>
        <dependency>
            <groupId>com.github.texttechnologylab</groupId>
            <artifactId>UIMATypeSystem</artifactId>
            <version>1.9.5</version>
            <exclusions>
                <exclusion>
                    <groupId>com.github.texttechnologylab.textimager-uima</groupId>
                    <artifactId>textimager-uima-types</artifactId>
                </exclusion>
            </exclusions>
        </dependency>

        <dependency>
            <groupId>com.google.code.gson</groupId>
            <artifactId>gson</artifactId>
            <version>2.10.1</version>
        </dependency>
    </dependencies>
</project>
